--- a/calendar.css
+++ b/calendar.css
@@ -59,6 +59,9 @@ body {
     padding: .1em;
     margin: .2em;
 }
+.active {
+    border: 2px solid #4CAF50;
+}
 .nameAndDone {
     display: flex;
 }
